05-Terraform-loops-metaarguments-splatoperator/c3-ec2securitygroups.tf
# Create Security Group - SSH Traffic


resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "allowing ssh"
  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create Security Group - web Traffic
resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "allowing ssh"
  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
